--- a/app/assets/stylesheets/ionic.css.erb
+++ b/app/assets/stylesheets/ionic.css.erb
@@ -9997,3 +9997,9 @@ a.button {
   font-size: 16px;
   white-space:normal !important;
 }
+
+.flight-card {
+  padding:10px;
+  margin-top:5px;
+  background-color:white;
+}
