--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -17,5 +17,5 @@
             </div>
         </div>
     </ion-content>
-    <button ng-if='dataLoaded' ng-click="letsDoThis()" style="border-radius:0px 0px 0px 0px;" class="button button-positive button-block fixed-to-bottom">Let's do this!</button>
+    <button ng-if='dataLoaded' ng-click="letsDoThis()" class="button button-positive button-block fixed-to-bottom no-radius">Let's do this!</button>
 </ion-view>
