--- a/app/assets/stylesheets/ionic.css.erb
+++ b/app/assets/stylesheets/ionic.css.erb
@@ -9990,7 +9990,7 @@ a.button {
 }
 
 .bold {
-  font-weight:500;
+  font-weight:500 !important;
 }
 
 .flight_detail_list p {
@@ -10002,4 +10002,35 @@ a.button {
   padding:10px;
   margin-top:5px;
   background-color:white;
+}
+
+.flight-list {
+  padding: 5px 10px;
+}
+
+.normal-weight {
+  font-weight:normal;
+}
+
+.seperator {
+  border: 0.5px solid #f0f0f0;
+}
+
+.no-margin {
+  margin:0;
+}
+
+.trip-slice p {
+  color: #666;
+}
+
+.no-radius {
+  border-radius:0px 0px 0px 0px;
+}
+
+.modal-header {
+  position:relative;
+  top:10px;
+  left:50%;
+  transform: translate(-50%)
 }
