--- a/app/assets/templates/return.html.erb
+++ b/app/assets/templates/return.html.erb
@@ -1,7 +1,11 @@
 <ion-view title='TimeWarp!' style="background-color:#FFFFFF;">
     <ion-content padding="false" class="has-header">
-        <div class="info-container" style='padding-top:10px;padding-bottom:10px;'>
-            <h4>Return to {{flightList.origin}}</h4>
+        <div class="info-container">
+            <div class='row'>
+                <div class='col'>
+                    <h4>Return <span class='normal-weight'>to {{flightList.origin}}</span></h4>
+                </div>
+            </div>
             <div class='row'>
                 <div class='col'>
                     <p>{{flightList.returnDate | date:'EEE MMM d, yyyy'}}</p>
@@ -12,21 +16,21 @@
             </div>
         </div>
         <ion-list>
-            <ion-item ng-repeat="flight in flightList['return']" ng-click="tripSummary(flight,flightList['trip_prices'][outbound_ids + flight['return_ids']])" ng-if="returnValid(flight)">
+            <ion-item class='flight-list' ng-repeat="flight in flightList['return']" ng-click="openModal(flight)" ng-if="returnValid(flight)">
                 <div class="row">
                     <div class='col col-center'>
-                        <p>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</p>
+                        <h2 class='bold'>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</h2>
                     </div>
                     <div class="col col-center">
                         <p class="align-right" style="color:black;">{{flight.departureTime}} - {{flight.arrivalTime}}</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class='col-10 col-center'>
-                        <img src={{flight.airlineImageUrl}} height='25' width='auto'>
+                    <div class='col-5 col-center'>
+                        <img src={{flight.airlineImageUrl}} height='20' width='auto' style='padding-left:5px;'>
                     </div>
                     <div class="col col-center">
-                        <p class='align-left' style='display:inline;'>{{flight.airline}}</p>
+                        <p class='align-left'>{{flight.airline}}</p>
                     </div>
                     <div class="col">
                         <p class="align-right">{{flight.duration}}, <ng-pluralize count="flight['stops']" when="{'1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
@@ -35,4 +39,74 @@
             </ion-item>
         </ion-list>
     </ion-content>
+    <script id="slice.html" type="text/ng-template">
+        <ion-modal-view>
+            <ion-header-bar>
+                <a href='#' style='font-size:14px;text-decoration:none;padding:5px;position:absolute;left:10px;top:10px;' ng-click="closeModal()">Cancel</a>
+                <p class='modal-header'>Return <span class='normal-weight'>to {{flightList.destination}}</span></p>
+            </ion-header-bar>
+                <ion-content>
+                    <div class='flight-card'>
+                        <div class="row">
+                            <div class='col col-center'>
+                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] | currency:"$":0}}</h4>
+                            </div>
+                            <div class="col col-center">
+                                <p class="align-right no-margin">Roundtrip, Per Person</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col col-center">
+                                <p class='align-left no-margin'>{{flightList.departureDate | date:'EEE MMM d, yyyy'}}</p>
+                            </div>
+                            <div class="col">
+                                <p class="align-right no-margin">{{trip.duration}}, <ng-pluralize count="trip['stops']" when="{'1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
+                            </div>
+                        </div>
+                        <div class='trip-slice' ng-repeat="flight in trip['flights']">
+                            <hr class='seperator'>
+                            <div class='row'>
+                                <div class='col-5'>
+                                    <img src="{{trip['airlineImageUrl']}}" height='25' width='auto' style='padding-left:5px;'>
+                                </div>
+                                <div class='col'>
+                                    <p>{{trip['airline']}} - {{flight['id']}}</p>
+                                </div>
+                            </div>
+                            <div class='row'>
+                                <div class='col'>
+                                    <p class='no-margin'>{{flight['segmentOriginString']}}</p>
+                                </div>
+                                <div class='col align-right'>
+                                    <p class='no-margin'>{{flight['segmentDestinationString']}}</p>
+                                </div>
+                            </div>
+                            <div class='row'>
+                                <div class='col col-center'>
+                                    <h3 class='no-margin'>{{flight['segmentOrigin']}}</h3>
+                                </div>
+                                <div class='col col-center'>
+                                    <img src="<%= image_url('nonstop_graphic') %>" height='25' width='auto'>
+                                </div>
+                                <div class='col col-center align-right'>
+                                    <h3 class='no-margin'>{{flight['segmentDestination']}}</h3>
+                                </div>
+                            </div>
+                            <div class='row'>
+                                <div class='col'>
+                                    <p>{{flight['segmentDepartureTime']}}</p>
+                                </div>
+                                <div class='col align-center'>
+                                    <p>{{flight['segmentDuration']}}</p>
+                                </div>
+                                <div class='col align-right'>
+                                    <p>{{flight['segmentArrivalTime']}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ion-content> 
+                <button class='button button-positive button-block no-radius fixed-to-bottom' ng-click="tripSummary(trip,flightList['trip_prices'][outbound_ids + flight['return_ids']])">Select this Return</button>
+          </ion-modal-view>
+    </script>
 </ion-view>
