--- a/app/assets/templates/outbound.html.erb
+++ b/app/assets/templates/outbound.html.erb
@@ -41,7 +41,7 @@
     </ion-content>
     <script id="slice.html" type="text/ng-template">
         <ion-modal-view>
-            <ion-header-bar>
+            <ion-header-bar style='border-bottom:1px solid #f0f0f0;'>
                 <a href='#' style='font-size:14px;text-decoration:none;padding:5px;position:absolute;left:10px;top:10px;' ng-click="closeModal()">Cancel</a>
                 <p class='modal-header'>Outbound <span class='normal-weight'>to {{flightList.destination}}</span></p>
             </ion-header-bar>
