--- a/app/assets/templates/payment.html.erb
+++ b/app/assets/templates/payment.html.erb
@@ -1,4 +1,4 @@
-<ion-view title="{{flightDetails.origin}} - {{flightDetails.destination}}" id="page3">
+<ion-view title="Payment Details" id="page3">
     <ion-content padding="false" class="has-header">
         <div class='info-container' ng-if="cardError">
             <p style='color:red;'>There was an error with your card. Please make sure all of your information is correct.</p>
