--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -7,15 +7,13 @@
         <div class='home-info' style='background-color:#1b191d;'>
             <img class='timewarp-image' src="<%= image_url('TimeTravelDark.jpg') %>">
             <div class='home-text'>
-                <h4>TimeWarp!</h4>
-                <h4>Save up to {{flightDetails['currentPrice'] - flightDetails['targetPrice'] | currency:"$":0}} per ticket!</h4>
-                <br>
-                <h5>No need to wait! Book your flights today at the low prices of the future. 100% guaranteed and fully refundable.</h5>
+                <h4>You found a TimeWarp!</h4>
+                <h5>The bunny went into the future and brought back cheaper fares. Hurry, the TimeWarp doesn't stay open for long!</h5>
                 <br>
                 <h5>TimeWarp closes in:<h5> 
                 <h4>{{countdown}}</h4>
             </div>
         </div>
     </ion-content>
-    <button ng-if='dataLoaded' ng-click="letsDoThis()" class="button button-positive button-block fixed-to-bottom no-radius">Let's do this!</button>
+    <button ng-if='dataLoaded' ng-click="letsDoThis()" class="button button-positive button-block fixed-to-bottom no-radius">Show Me The Future!</button>
 </ion-view>
