--- a/app/assets/templates/reviewFarePurchase.html.erb
+++ b/app/assets/templates/reviewFarePurchase.html.erb
@@ -19,7 +19,7 @@
                 <p>{{traveller.firstName}} {{traveller.lastName}}</p>
             </div>
             <div class="col align-right">
-                <p>{{tripDetails['price'] | currency:"$":0 }}</p>
+                <p>{{tripDetails['price'] - 50 | currency:"$":0 }}</p>
             </div>
         </div>
         <div class="row content-padding">
@@ -28,6 +28,7 @@
             </div>
             <div class="col align-right">
                 <h4>{{totalCost | currency:"$":0}}</h4>
+                <h5 style='color:red;'>Save {{50 * savedTravellers.length | currency:"$":0}}</h5>
             </div>
         </div>
         <br><br>
