--- a/app/assets/templates/tripSummary.html.erb
+++ b/app/assets/templates/tripSummary.html.erb
@@ -40,7 +40,7 @@
                         <p>{{flight['segmentDuration']}}</p>
                     </div>
                     <div class='col align-right'>
-                        <p>{{flight['segmentArrivalTime']}}</p>
+                        <p>{{flight['segmentArrivalTime']}}<span ng-if="flight['segmentNewDays'] > 0">+{{flight['segmentNewDays']}}d</span></p>
                     </div>
                 </div>
             </div>
@@ -85,17 +85,20 @@
                         <p>{{flight['segmentDuration']}}</p>
                     </div>
                     <div class='col align-right'>
-                        <p>{{flight['segmentArrivalTime']}}</p>
+                        <p>{{flight['segmentArrivalTime']}}<span ng-if="flight['segmentNewDays'] > 0">+{{flight['segmentNewDays']}}d</span></p>
                     </div>
                 </div>
             </div>
         </div>
-    <div style="height:100px;"></div>
+    <div style="height:120px;"></div>
     </ion-content>
     <div class='fixed-to-bottom' style='background-color:#fff;border-top: 1px solid #dfdfdf;'>
         <div class='row'>
-            <div class='col'><p>Roundtrip, Per Person</p></div>
-            <div class='col align-right bold'><p>{{tripDetails['price'] | currency:"$":0}}</p></div>
+            <div class='col'><p class='no-margin'>Roundtrip, Per Person</p></div>
+            <div class='col align-right bold'>
+                <p class='no-margin'>{{tripDetails['price'] - 50 | currency:"$":0}}</p>
+                <p class='align-right no-margin' style='font-size:13px;color:red;'><strike>{{tripDetails['price'] | currency:"$":0}}</strike> Save $50</p>
+            </div>
         </div>
         <button class='button button-positive button-block no-radius' ng-click='addTravellers()'>Choose Travelers</button>
     </div>
