--- a/app/assets/templates/return.html.erb
+++ b/app/assets/templates/return.html.erb
@@ -33,7 +33,7 @@
                         <p class='align-left'>{{flight.airline}}</p>
                     </div>
                     <div class="col">
-                        <p class="align-right">{{flight.duration}}, <ng-pluralize count="flight['stops']" when="{'1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
+                        <p class="align-right">{{flight.duration}}, <ng-pluralize count="flight['stops']" when="{'0':'nonstop', '1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
                     </div>
                 </div>
             </ion-item>
@@ -49,7 +49,7 @@
                     <div class='flight-card'>
                         <div class="row">
                             <div class='col col-center'>
-                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] | currency:"$":0}} <span style='font-size:13px;color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike> Save $50</span></h4>
+                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] - 50 | currency:"$":0}} <span style='font-size:13px;color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike> Save $50</span></h4>
                             </div>
                             <div class="col col-center">
                                 <p class="align-right no-margin">Roundtrip, Per Person</p>
@@ -60,7 +60,7 @@
                                 <p class='align-left no-margin'>{{flightList.departureDate | date:'EEE MMM d, yyyy'}}</p>
                             </div>
                             <div class="col">
-                                <p class="align-right no-margin">{{trip.duration}}, <ng-pluralize count="trip['stops']" when="{'1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
+                                <p class="align-right no-margin">{{trip.duration}}, <ng-pluralize count="trip['stops']" when="{'0':'nonstop','1': '1 stop','other':'{} stops'}"></ng-pluralize></ng-pluralize></p>
                             </div>
                         </div>
                         <div class='trip-slice' ng-repeat="flight in trip['flights']">
