--- a/app/assets/templates/tripSummary.html.erb
+++ b/app/assets/templates/tripSummary.html.erb
@@ -97,7 +97,7 @@
             <div class='col'><p class='no-margin'>Roundtrip, Per Person</p></div>
             <div class='col align-right bold'>
                 <p class='no-margin'>{{tripDetails['price'] - 50 | currency:"$":0}}</p>
-                <p class='align-right no-margin' style='font-size:13px;color:red;'><strike>{{tripDetails['price'] | currency:"$":0}}</strike> Save $50</p>
+                <p class='align-right no-margin' style='font-size:14px;color:red;'><strike>{{tripDetails['price'] | currency:"$":0}}</strike></p>
             </div>
         </div>
         <button class='button button-positive button-block no-radius' ng-click='addTravellers()'>Choose Travelers</button>
