--- a/app/assets/templates/return.html.erb
+++ b/app/assets/templates/return.html.erb
@@ -19,7 +19,7 @@
             <ion-item class='flight-list' ng-repeat="flight in flightList['return']" ng-click="openModal(flight)" ng-if="returnValid(flight)">
                 <div class="row">
                     <div class='col col-center'>
-                        <h2 class='bold'>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] - 50 | currency:"$":0}} <span style='font-size:13px;color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike> Save $50</span></h2>
+                        <h2 class='bold'>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] - 50 | currency:"$":0}} <span style='color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike></span></h2>
                     </div>
                     <div class="col col-center">
                         <p class="align-right" style="color:black;">{{flight.departureTime}} - {{flight.arrivalTime}}<span ng-if='flight.newDays > 0'>+{{flight.newDays}}d</span></p>
@@ -49,7 +49,7 @@
                     <div class='flight-card'>
                         <div class="row">
                             <div class='col col-center'>
-                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] - 50 | currency:"$":0}} <span style='font-size:13px;color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike> Save $50</span></h4>
+                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] - 50 | currency:"$":0}} <span style='color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike></span></h4>
                             </div>
                             <div class="col col-center">
                                 <p class="align-right no-margin">Roundtrip, Per Person</p>
