--- a/app/assets/templates/return.html.erb
+++ b/app/assets/templates/return.html.erb
@@ -49,7 +49,7 @@
                     <div class='flight-card'>
                         <div class="row">
                             <div class='col col-center'>
-                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] - 50 | currency:"$":0}} <span style='color:red;'><strike>{{flightList['trip_prices'][outbound_ids + flight['return_ids']] | currency:"$":0}}</strike></span></h4>
+                                <h4 class='bold no-margin'>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] - 50 | currency:"$":0}} <span style='color:red;'><strike>{{flightList['trip_prices'][outbound_ids + trip['return_ids']] | currency:"$":0}}</strike></span></h4>
                             </div>
                             <div class="col col-center">
                                 <p class="align-right no-margin">Roundtrip, Per Person</p>
