--- a/app/assets/templates/return.html.erb
+++ b/app/assets/templates/return.html.erb
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </ion-content> 
-                <button class='button button-positive button-block no-radius fixed-to-bottom' ng-click="tripSummary(trip,flightList['trip_prices'][outbound_ids + flight['return_ids']])">Select this Return</button>
+                <button class='button button-positive button-block no-radius fixed-to-bottom' ng-click="tripSummary(trip,flightList['trip_prices'][outbound_ids + trip['return_ids']])">Select this Return</button>
           </ion-modal-view>
     </script>
 </ion-view>
