--- a/app/assets/templates/reviewFarePurchase.html.erb
+++ b/app/assets/templates/reviewFarePurchase.html.erb
@@ -1,39 +1,56 @@
 <ion-view title="Review Fare &amp; Purchase" id="page4">
-    <ion-content padding="false" class="has-header" style='background-color:#fafafa;'>
-        <div class="info-container" style="background-color:white;">
-            <div class="row content-padding">
-                <div class="col-20 col-center">
-                    <i class="ion-card" style="font-size:40px"></i>
-                </div>
-                <div class="col-80 col-center">
-                    <p style="color:#3097f3">{{card}}</p>
-                </div>
-            </div>
-        </div>
-        <div class='info-container' style='padding:15px;'>
-            <h4>{{flightDetails.origin}} to {{flightDetails.destination}}</h4>
-            <p>{{tripDetails.departureDate | date:'MMM d, yyyy'}} - {{tripDetails.returnDate | date:'MMM d, yyyy'}}</p>
-        </div>
-        <div class="row content-padding" ng-repeat="traveller in savedTravellers">
-            <div class="col">
-                <p>{{traveller.firstName}} {{traveller.lastName}}</p>
-            </div>
-            <div class="col align-right">
-                <p>{{tripDetails['price'] - 50 | currency:"$":0 }}</p>
-            </div>
-        </div>
-        <div class="row content-padding">
-            <div class="col">
-                <h4>Total</h4>
-            </div>
-            <div class="col align-right">
-                <h4>{{totalCost | currency:"$":0}}</h4>
-            </div>
-        </div>
-        <br><br>
+    <ion-content class="has-header" style='padding:20px;'>
         <div class='row'>
-            <div class='col'>
-                <p style='text-align:center;'><a href='' style='color:#3097f3'>Fare Rules &amp; Legal Stuff</a></p>
+            <div class='col-10'>
+                <i class='ion-plane rotate-270' style='font-size:20px;color:#d9d9d9;'></i>
+            </div>
+            <div class='col-90'>
+                <h4>{{flightDetails.origin}} to {{flightDetails.destination}}</h4>
+                <p>{{tripDetails.departureDate | date:'EEE, MMM d'}} <span ng-if="tripType['type'] == 'whatever'">+/- 1 day</span></p>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-10'>
+                <i class='ion-plane rotate-90' style='font-size:20px;color:#d9d9d9;'></i>
+            </div>
+            <div class='col-90'>
+                <h4>{{flightDetails.destination}} to {{flightDetails.origin}}</h4>
+                <p>{{tripDetails.returnDate | date:'EEE, MMM d'}} <span ng-if="tripType['type'] == 'whatever'">+/- 1 day</span></p>
+            </div>
+        </div>
+        <hr>
+        <div class='row'>
+            <div class='col-10'>
+                <i class='ion-person' style='font-size:20px;color:#d9d9d9;'></i>
+            </div>
+            <div class='col-90'>
+                <p><ng-pluralize count="savedTravellers.length" when="{'1': '1 traveler','other':'{} travelers'}"></ng-pluralize></p>
+            </div>    
+        </div>
+        <div class='row' ng-repeat="traveller in savedTravellers">
+            <div class='col-10'></div>
+            <div class='col-90'>
+                <div class='row'>
+                    <div class='col-20'>
+                        <div class="traveller-image-container" style='height:30px;width:30px;'>
+                        <img class="traveller-image" src="<%= image_url('BunnyHalfSmile.png') %> " height="50" width="50" style='top:-6px;left:-10px;'>
+                    </div>
+                    </div>
+                    <div class='col-80'>
+                        <p style='margin-bottom:0px;'><strong>{{traveller.firstName}} {{traveller.lastName}}</strong></p>
+                        <p>{{traveller.gender}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class='row'>
+            <div class='col-10'>
+                <i class='ion-card' style='font-size:20px;color:#d9d9d9;'></i>
+            </div>
+            <div class='col-90'>
+                <h4>{{totalCost | currency:"$":0}}</h4>
+                <p>on {{card}}</p>
             </div>
         </div>
     </ion-content>
